# Plugins

./: FIle 01  blender_shortcut_logger.py  maya_shortcut_logger.py  vertex_to_nearest_edge_merge.py
clinic-desktop/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
clinic-desktop/app/: __init__.py  app_context.py  main.py
clinic-desktop/app/db/: __init__.py  models.py  seed.py
clinic-desktop/app/domain/: __init__.py  backups.py  billing.py  exports.py  numbering.py  pdf.py  reports.py  rgpd.py
clinic-desktop/app/security/: __init__.py  auth.py  crypto.py
clinic-desktop/app/services/: __init__.py  activities_service.py  appointments_service.py  consultations_service.py  invoices_service.py  patients_service.py  payments_service.py  reports_service.py  services_service.py  settings_service.py
clinic-desktop/app/ui/: __init__.py
clinic-desktop/app/ui/qml/: AppointmentsView.qml  BackupsView.qml  ConsultationsView.qml  Dashboard.qml  InvoiceForm.qml  InvoicesView.qml  LoginDialog.qml  MainWindow.qml  PatientForm.qml  PatientsView.qml  ReportsView.qml  SettingsView.qml
clinic-desktop/app/ui/styles/: qtquickcontrols2.conf  theme_dark.qmltheme  theme_light.qmltheme
clinic-desktop/files/pdf_templates/: invoice_footer_DRL.html  invoice_footer_OST.html  invoice_header_DRL.html  invoice_header_OST.html
clinic-desktop/scripts/: build_mac.sh  build_win.ps1  dev_run.sh
clinic-desktop/tests/: conftest.py  test_billing.py  test_exports.py  test_numbering.py  test_pdf.py
clinic-local/: .gitignore  (+9 more)
clinic-portable/: .env.example  LICENSE  README.md  alembic.ini  pyproject.toml  requirements.txt
clinic-portable/app/: app_context.py  main.py  platform_paths.py
clinic-portable/app/db/: models.py  seed.py  session.py
clinic-portable/app/db/migrations/: env.py
clinic-portable/app/domain/: __init__.py  backups.py  billing.py  exports.py  numbering.py  pdf.py  reports.py  rgpd.py
clinic-portable/app/security/: auth.py  crypto.py
clinic-portable/app/ui/qml/: Appointments.qml  Backups.qml  Consultations.qml  Dashboard.qml  InvoiceForm.qml  Invoices.qml  LoginDialog.qml  MainWindow.qml  PatientForm.qml  Patients.qml  Reports.qml  Settings.qml
clinic-portable/files/pdf_templates/: invoice_footer_DRL.html  invoice_footer_OST.html  invoice_header_DRL.html  invoice_header_OST.html
clinic-portable/scripts/: build_mac_portable.sh  build_win_portable.ps1  dev_run.sh
clinic-portable/tests/: test_billing.py  test_exports.py  test_numbering.py  test_pdf.py
(+222 files in other folders)
