[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic-desktop"
version = "0.1.0"
description = "Application de gestion pour cabinet d'ostéopathie et drainage lymphatique"
readme = "README.md"
authors = [
  { name = "Clinic Desktop", email = "contact@example.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
  "PySide6==6.6.1",
  "PySide6-Addons==6.6.1",
  "SQLAlchemy==2.0.22",
  "alembic==1.12.1",
  "APScheduler==3.10.4",
  "cryptography==41.0.7",
  "python-dotenv==1.0.0",
  "passlib[argon2]==1.7.4",
  "openpyxl==3.1.2",
  "pydantic==1.10.13",
  "reportlab==4.0.7",
  "WeasyPrint==61.2",
  "pandas==2.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-qt>=4.2.0",
  "black==23.9.1",
  "isort==5.12.0",
  "flake8==6.1.0",
  "pre-commit==3.4.0"
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
filterwarnings = [
  "ignore::DeprecationWarning"
]

[tool.coverage.run]
omit = ["tests/*"]
