[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinic-portable"
version = "0.1.0"
description = "Application de gestion portable pour ostéopathie et drainage lymphatique"
authors = [{ name = "ClinicPortable" }]
license = { text = "MIT" }
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "PySide6>=6.6",
    "PySide6-Addons>=6.6",
    "PySide6-Essentials>=6.6",
    "SQLAlchemy>=2.0",
    "alembic>=1.12",
    "python-dotenv>=1.0",
    "cryptography>=41.0",
    "argon2-cffi>=23.1.0",
    "WeasyPrint>=59.0",
    "openpyxl>=3.1",
    "pandas>=2.1",
    "pendulum>=3.0",
    "python-dateutil>=2.8",
    "pyyaml>=6.0",
    "reportlab>=4.0",
    "orjson>=3.9",
    "babel>=2.12",
    "platformdirs>=3.11"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "black>=23.7",
    "isort>=5.12",
    "flake8>=6.1",
    "mypy>=1.5",
    "types-openpyxl",
    "types-python-dateutil"
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
